local-metadata: Improve string sanitise

* Do not get substring with a blacklisted word.
* Only allow a few chars to finish the substring.
* Include new blacklist word "x264".

https://bugzilla.gnome.org/show_bug.cgi?id=741562